# MySynth

./: .gitignore  CLAUDE.md  CMakeLists.txt  PRODUCT_ROADMAP.md  README.md  SESSION_CONTEXT.md  index.html
Assets/: make_icon.py
Source/: Main.cpp  MainComponent.cpp  MainComponent.h  SynthVoice.cpp  SynthVoice.h  VintageLookAndFeel.cpp  VintageLookAndFeel.h
cmake/: patch_plist.cmake
docs/: PRODUCT_ROADMAP.md  README.md  SESSION_CONTEXT.md
scripts/: package_release.sh  publish_release.sh  run_debug.sh
site/: index.html
